merge scooter into station